--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.408.0",
     "mongoose": "^8.5.0",
